[MNG-8189] Warn about plugin versions not pinned for all lifecycles
Also move the default location into DefaultLifecycleRegistry as the DefaultLifecyclePluginAnalizer is not used anymore